# VGG-torch

./: README.md  pyproject.toml  scripts.py
app/: __init__.py  data.py  main.py  training.py  utils.py  vgg.py
